--- a/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2.vcxproj
+++ b/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2.vcxproj
@@ -113,7 +113,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="File.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="File.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
