--- a/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2.vcxproj.filters
+++ b/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="WaveBuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InputBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TestBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WaveBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TestBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
