--- a/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2.vcxproj.filters
+++ b/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2/Semesterprojekt_3_Gruppe_2.vcxproj.filters
@@ -18,5 +18,31 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\..\Dropbox\Programming\C++\CLR_GUI_Test_1\CLR_GUI_Test_1\DirectoryHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\Dropbox\Programming\C++\CLR_GUI_Test_1\CLR_GUI_Test_1\MyForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\Dropbox\Programming\C++\CLR_GUI_Test_1\CLR_GUI_Test_1\OBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\Dropbox\Programming\C++\CLR_GUI_Test_1\CLR_GUI_Test_1\TreeElement.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\Dropbox\Programming\C++\CLR_GUI_Test_1\CLR_GUI_Test_1\DirectoryHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\Dropbox\Programming\C++\CLR_GUI_Test_1\CLR_GUI_Test_1\MyForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\Dropbox\Programming\C++\CLR_GUI_Test_1\CLR_GUI_Test_1\OBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\Dropbox\Programming\C++\CLR_GUI_Test_1\CLR_GUI_Test_1\TreeElement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
